add more validation rules